sagitta-integration-tests/tests/snapshots/test__1-2.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: commit
---
SagittaCommitObject {
    tree_id: ObjectId {
        id: "38dc07c664c7ebafbc6c93b9454f47ec9c1a3f20cac908edd23e08f35bf2fc1f",
    },
    parent_commit_id: None,
    message: "Initial commit",
}
