sagitta-integration-tests/tests/snapshots/test__1-3.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: dir
---
Dir(
    SagittaTreeObjectDir {
        items: [
            (
                "hello.txt",
                ObjectId {
                    id: "e7036399b485aba832fee3b7bbf6f52efa062561f5cfee6fb71432e5fe2aa105",
                },
            ),
            (
                "hello_dir",
                ObjectId {
                    id: "58687689fd6e8f859c1352644848a82fb61ec3ee92db1f2a25bf115363875222",
                },
            ),
        ],
        size: 4096,
        mtime: SystemTime {
            tv_sec: 1261440000,
            tv_nsec: 0,
        },
        ctime: SystemTime {
            tv_sec: 1261440000,
            tv_nsec: 0,
        },
        perm: 493,
    },
)
