sagitta-integration-tests/tests/snapshots/test__1-5.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: xs
---
[
    (
        "hello.txt",
        "Hello, world!\n",
    ),
]
