sagitta-integration-tests/tests/snapshots/test__1.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: head_id
---
ObjectId {
    id: "d8aeabe47179c64dfdb51f9e6d9003c4d73df5dcc569f953e5d48e67a1219f13",
}
