sagitta-integration-tests/tests/snapshots/test__2-2.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out1
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 1\ndr-xr-xr-x 2  0 Dec 22  2009 hello_dir\n-r--r--r-- 1 14 Dec 22  2009 hello.txt\n",
    stderr: "",
}
