sagitta-integration-tests/tests/snapshots/test__2-4.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out3
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "total 1\n-r--r--r-- 1 15 Dec 22  2009 hello2.txt\n",
    stderr: "",
}
