sagitta-integration-tests/tests/snapshots/test__3.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: workspaces
---
WorkspaceListResponse {
    workspaces: [
        "workspace1",
    ],
}
