sagitta-integration-tests/tests/snapshots/test__4-3.snap
---
source: sagitta-integration-tests/tests/test.rs
expression: out2
---
Output {
    status: ExitStatus(
        unix_wait_status(
            0,
        ),
    ),
    stdout: "Hello, copy on write!",
    stderr: "",
}
